# CodeCombat

./: .gitignore  CMakeLists.txt
notes/: interface.txt  purchasing.txt
src/: arena.cpp  arena.h  cell.h  damage.cpp  damage.h  defs.h  gl.h  javainterface.cpp  javainterface.h  main.cpp  mapgenerator.cpp  mapgenerator.h  robot.cpp  robot.h  window.cpp  window.h
src/util/: direction.h  random.cpp  random.h  simplexnoise.cpp  simplexnoise.h  weakset.h
